# fluent-mind-bot

./: Dockerfile  Makefile  README.md  conversationbot  manage.py  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: lint_check.yml  run_tests.yml
bot/: app.py  bot.py  constants.py  database.py  gpt.py  handlers.py  helpers.py  settings.py  urls.py  views.py
bot/tests/: test_database.py  test_handlers.py  test_helpers.py
bot_tmp/: app.py
chats/: models.py  tests.py  urls.py  views.py
chats/migrations/: 0001_initial.py  0002_alter_text_completion_tokens_alter_text_date_and_more.py  0002_alter_text_username.py  0002_chat_delete_message.py  0003_alter_text_completion_tokens_and_more.py  0003_alter_text_username.py  0003_text_alter_chat_options_remove_chat_date_and_more.py  0004_text_total_tokens.py  0005_text_content_type.py
config/: settings.py  urls.py
fluent_mind/: asgi.py  settings.py  urls.py  views.py  wsgi.py
fluent_mind/bot/: apps.py  bot.py  views.py
fluent_mind/templates/: index.html
fluent_mind/users/: apps.py  urls.py  views.py
templates/: base.html  chats.html  messages.html
users/migrations/: 0001_initial.py
