[tool.poetry]
name = "fluent-mind-bot"
version = "0.1.0"
description = ""
authors = ["Andrey Ivanov <ivnv.xd@gmail.com>"]
readme = "README.md"
packages = [{include = "config"}]

[tool.poetry.dependencies]
python = "^3.11"
python-dotenv = "^1.0.0"
python-telegram-bot = "^20.1"
openai = "^0.27.0"
Django = "^4.1.7"
gunicorn = "^20.1.0"
django-bootstrap4 = "^23.1"
tiktoken = "^0.3.3"
colorlog = "^6.7.0"
marvin = "^0.8.0"
langchain = "0.0.153"
trafilatura = "^1.5.0"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
pytest = "^7.2.1"
pytest-cov = "^4.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
bot = "bot.app:main"
